namespaces/live.cloud-platform.service.justice.gov.uk/manage-offences-api-preprod/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: manage-offences-api-preprod
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "preprod"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "manage_offences_public"
    cloud-platform.justice.gov.uk/slack-alert-channel: "farsight-alerts"
    cloud-platform.justice.gov.uk/application: "Manage offences API"
    cloud-platform.justice.gov.uk/owner: "Digital Prison Services: dps-hmpps@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/manage-offences-api.git"
    cloud-platform.justice.gov.uk/team-name: "farsight-devs"
